ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors6/input.ts.stderr
error: An implementation cannot be declared in ambient contexts
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Accessors/parserAccessors6/input.ts:3:14
  |
3 |   set foo(v) { }
  |              ^

